# simple-streaming-server

./: Cargo.toml  LICENSE  README.md  config.toml
assets/css/: main.css
assets/js/: main.js
src/: get_routes.rs  main.rs
templates/: 404.html  index.html
