[package]
name = "streaming-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
hyper = "1.5.2"
log = "0.4.25"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
urlencoding = "2.1.3"
warp = "0.3.7"
warp-range = "3.0.0"
